// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Liquid Basic 1`] = `
"<div>
  <input value=\\"{{name}}\\" />

  Hello! I can run in React, Vue, Solid, or Liquid!
</div>
"
`;

exports[`Liquid Form block 1`] = `
"<form
  validate=\\"{{validate}}\\"
  ref=\\"{{formRef}}\\"
  method=\\"{{method}}\\"
  name=\\"{{name}}\\"
></form>
<style>
  .pre-1 {
    padding: 10px;
    color: red;
    textalign: center;
  }
</style>
"
`;

exports[`Liquid Input block 1`] = `
"<input
  placeholder=\\"{{placeholder}}\\"
  type=\\"{{type}}\\"
  name=\\"{{name}}\\"
  value=\\"{{value}}\\"
  defaultValue=\\"{{defaultValue}}\\"
  required=\\"{{required}}\\"
/>
"
`;

exports[`Liquid Select block 1`] = `
"<select
  value=\\"{{value}}\\"
  defaultValue=\\"{{defaultValue}}\\"
  name=\\"{{name}}\\"
></select>
"
`;

exports[`Liquid Submit button block 1`] = `
"<button type=\\"submit\\">{{props.text}}</button>
"
`;
